# flop-bird

./: .gitignore  README.md  flop_bird.cpp  index.html  meson.build  package.json  pnpm-lock.yaml
src/: index.js  main.cpp
src/core/: engine.cpp  engine.hpp  event_manager.cpp  event_manager.hpp  texture_manager.hpp
src/includes/: engine_interface.hpp  event_manager_interface.hpp  sprite_interface.hpp  sprite_manager_interface.hpp  texture_manager_interface.hpp
src/pack/: background.js
